# hw3-allisonpvn

./: Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: __init__.py  utils.py
ligotools/.ipynb_checkpoints/: utils-checkpoint.py
ligotools/tests/: test_readligo.py  test_utils.py
ligotools/tests/.ipynb_checkpoints/: test_readligo-checkpoint.py
